# iron-game

./: Cargo.toml
iron-derive/: Cargo.toml
iron-derive/src/: lib.rs
src/: agent.rs  commands.rs  events.rs  factor.rs  formula.rs  game.rs  game_events.rs  log.rs  main.rs  math.rs  pops.rs  probability.rs  render.rs  settlement.rs  storage.rs  ui.rs  world.rs  worldgen.rs
src/ui/: container.rs  events.rs  mod.rs
