[package]
name = "iron-age"
version = "0.1.0"
authors = ["Riley Stewart <rileystewart@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron-derive = { path = "iron-derive", version = "0.1.0" }
lazy_static = "1.4.0"
rand = "0.8.4"
rand_distr = "0.4.1"
regex = "*"
ggez = "0.6.0"

[workspace]
