[package]
name = "iron-age"
version = "0.1.0"
authors = ["Riley Stewart <rileystewart@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
rustflags = [
    "-Z", "macro-backtrace",
]

[dependencies]
iron-derive = { path = "iron-derive", version = "0.1.0" }
lazy_static = "1.4.0"
rand = "0.8.4"
rand_distr = "0.4.1"
regex = "*"
anymap = "0.12.1"
ggez = "0.6.0"
strum = { version = "0.21", features = ["derive"] }
rayon = "1.5.1"
Inflector = "0.11.4"
noise = "0.7.0"
hecs = "0.6.2"

[workspace]
